# meta-openenv-cloud-scaler

./: .gitignore  DESIGN.md  Dockerfile  README.md  __init__.py  check.py  client.py  cloud_scaler_env.py  code_review_env.py  current_test_results.txt  demo.py  env.py  index.html  inference.py  inference_output.txt  inference_output_compliance.txt  inference_output_final.txt  inference_output_polish.txt  inference_wdif.py  main.py  models.py  openenv.yaml  preflight_results.txt  pyproject.toml  requirements.txt  test_code_review.py  test_env.py  test_grader_local.py  test_results.txt
server/: __init__.py  app.py  code_review_logic.py  environment.py  llm_judge.py  models.py  scenarios.py  tasks.py  utils.py
