[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-openenv-cloud-scaler"
version = "1.0.0"
description = "Cloud AutoScaler Environment for Meta OpenEnv Track"
authors = [
    { name = "kkoriprince90" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "openenv-core",
    "gymnasium==0.29.1",
    "numpy>=1.24.0"
]

[tool.setuptools.packages.find]
where = ["."]
